# anchor-basics

./: Anchor.toml  testNftUri.json
programs/anchor-basics/: Cargo.toml
programs/anchor-basics/src/: lib.rs
tests/: anchor-basics.ts
